docker/kubernetes-all-in-one/Deployment_flowablet2-flowable-admin.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  creationTimestamp: null
  generation: 1
  labels:
    pflaeging.net/deployment: flowablet2-flowable-allinone
  name: flowablet2-flowable-allinone
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      pflaeging.net/deployment: flowablet2-flowable-allinone
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        pflaeging.net/deployment: flowablet2-flowable-allinone
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: flowablet2-flowable
        image: docker-registry.default.svc:5000/brz-gv-at/flowable-all-in-one:6.4.2.1
        command: ["./wait-for-something.sh"]
        args: ["flowablet2-postgresql", "5432", "PostgreSQL", "/opt/tomcat/bin/catalina.sh", "run"]
        imagePullPolicy: Always
        name: flowable-allinone
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
