docker/kubernetes-all-in-one/Deployment_flowablet2-postgresql.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  creationTimestamp: null
  generation: 1
  labels:
    pflaeging.net/deployment: flowablet2-postgresql
  name: flowablet2-postgresql
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      pflaeging.net/deployment: flowablet2-postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        pflaeging.net/deployment: flowablet2-postgresql
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: flowablet2-flowable
        image: docker-registry.default.svc:5000/brz-gv-at/postgresql:9.6-centos
        imagePullPolicy: Always
        name: postgresql
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: flowablet2-pg-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: flowablet2-pg-data
        persistentVolumeClaim:
          claimName: flowablet2-pg-data
status: {}
