docker/kubernetes-all-in-one/Service_flowablet2-flowable-allinone.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    pflaeging.net/instance: flowablet2
    pflaeging.net/service: flowablet2-flowable-allinone
  name: flowablet2-flowable-allinone
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    pflaeging.net/deployment: flowablet2-flowable-allinone
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
