docker/kubernetes-all-in-one/Service_flowablet2-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    pflaeging.net/instance: flowablet2
    pflaeging.net/service: postgresql
  name: flowablet2-postgresql
spec:
  ports:
  - name: 5432-tcp
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    pflaeging.net/deployment: flowablet2-postgresql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
