docker/kubernetes-all-in-one/Route_flowablet2-flowable-allinone.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    pflaeging.net/instance: flowablet2
    pflaeging.net/service: flowablet2-flowable-allinone
  name: flowablet2-flowable-allinone
spec:
  host: flowablet2.rohan.pfpk.pro
  path: /
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: flowablet2-flowable-allinone
    weight: 100
  wildcardPolicy: None
status:
  ingress: null
